Add PlantUML Script